updated example notebook with MABs

--- a/docs/guide/search_space.ipynb
+++ b/docs/guide/search_space.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "b667948a",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "max    992.00000    1.000000    5.000000   11.410597"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "6d563aae",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "23d6f552",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "a2953719",
    "metadata": {},
    "outputs": [
@@ -220,18 +220,65 @@
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00*MeanLabel\"]}\n",
       "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623, 0.056145623]}\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = Div, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = Mul, weight = 1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = Sub, weight = 0.5\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = Add, weight = 0.5\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
       "\n"
      ]
     }
    ],
    "source": [
     "search_space.print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdcee683",
+   "metadata": {},
+   "source": [
+    "## Initializing sampling probabilities\n",
+    "\n",
+    "The search space will create the terminals based on each input feature.\n",
+    "\n",
+    "Brush lets you start the execution with uniformly initialized weights for sampling terminals when creating or mutating programs or pre-calculating sampling probabilities based on correlations with the target variable.\n",
+    "\n",
+    "These weights will affect the occurrence of each terminal in the programs during the run.\n",
+    "\n",
+    "You can enable this feature by setting `weights_init=True`. This setting is true by default.\n",
+    "\n",
+    "Below we show the search space with the weights off."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "77d94281",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Search space ===\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00*MeanLabel\"]}\n",
+      "terminal_weights: {\"ArrayI\": [1, 1], \"ArrayB\": [1, 1], \"ArrayF\": [1, 1, 1]}\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_space_off = SearchSpace(data, user_ops, weights_init=False)\n",
+    "search_space_off.print()"
    ]
   },
   {
@@ -257,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "1c8c72c1",
    "metadata": {},
    "outputs": [
@@ -269,12 +316,12 @@
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00*MeanLabel\"]}\n",
       "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623, 0.056145623]}\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = Div, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = Mul, weight = 1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = Sub, weight = 0.5\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = Add, weight = 0.5\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
       "\n"
      ]
     }
@@ -284,6 +331,91 @@
     "\n",
     "search_space = SearchSpace(data, user_ops)\n",
     "search_space.print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9799b3a",
+   "metadata": {},
+   "source": [
+    "The regressor contains an engine, responsible for running the search.\n",
+    "\n",
+    "The engine will have its own instance of the search space.You can access the search space from the regressor with the following:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23b173bf",
+   "metadata": {},
+   "source": [
+    "## Automatically updating sampling probabilities with multi-armed bandits\n",
+    "\n",
+    "Brush has a reinforcement learning agent implemented on the C++ backend that will observe which terminals are making the programs better or worse regarding the user-defined objectives and update the sampling probabilities.\n",
+    "\n",
+    "To enable it, you must set `bandit=\"thompson\"` if you want to have a global static probability used during the entire search, or `bandit=\"dynamic_thompson\"` if you want to use a policy that gives more importance to recent observed results and sets a lower importance to older generations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3a68b9eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed 100% [====================]\n",
+      "saving final population as archive...\n",
+      "Best model: If(x_0>0.50,Sub(-0.00*x_0,-8.32*MeanLabel),9.04*MeanLabel)\n",
+      "score: 0.0035742075340854385\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pybrush import BrushRegressor\n",
+    "\n",
+    "est = BrushRegressor(\n",
+    "    functions=user_ops,\n",
+    "    max_gens=20,\n",
+    "    objectives=[\"error\", \"linear_complexity\"],\n",
+    "    weights_init=True,\n",
+    "    bandit=\"thompson\",\n",
+    "    verbosity=1\n",
+    ")\n",
+    "\n",
+    "est.fit(X.values,y.values)\n",
+    "\n",
+    "print(\"Best model:\", est.best_estimator_.get_model())\n",
+    "print('score:', est.score(X,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bcfc0903",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Search space ===\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00*MeanLabel\"]}\n",
+      "terminal_weights: {\"ArrayI\": [0.77648646, 0.6043145], \"ArrayB\": [0.8667038, 0.8644027], \"ArrayF\": [0.06445073, 0.7268156, 0.7447441]}\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "est.engine_.search_space.print()"
    ]
   },
   {
@@ -313,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
