Updated output of notebook

--- a/docs/guide/saving_loading_populations.ipynb
+++ b/docs/guide/saving_loading_populations.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -48,78 +48,77 @@
      "output_type": "stream",
      "text": [
       "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 10.84173 (54.01542)\n",
-      "Val Loss (Med): 10.84173 (54.01542)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 19 (2163)\n",
-      "Time (s): 0.09850\n",
+      "Train Loss (Med): 14.45158 (74.37033)\n",
+      "Val Loss (Med): 14.45158 (74.37033)\n",
+      "Median Size (Max): 3 (24)\n",
+      "Median complexity (Max): 9 (3315)\n",
+      "Time (s): 0.13028\n",
       "\n",
       "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 10.84173 (38.19256)\n",
-      "Val Loss (Med): 10.84173 (38.19256)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (2163)\n",
-      "Time (s): 0.26875\n",
+      "Train Loss (Med): 14.15208 (20.54475)\n",
+      "Val Loss (Med): 14.15208 (20.54475)\n",
+      "Median Size (Max): 3 (19)\n",
+      "Median complexity (Max): 9 (1671)\n",
+      "Time (s): 0.20999\n",
       "\n",
       "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 10.43982 (34.84354)\n",
-      "Val Loss (Med): 10.43982 (34.84354)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (2163)\n",
-      "Time (s): 0.46519\n",
+      "Train Loss (Med): 11.74184 (17.94969)\n",
+      "Val Loss (Med): 11.74184 (17.94969)\n",
+      "Median Size (Max): 3 (19)\n",
+      "Median complexity (Max): 9 (1671)\n",
+      "Time (s): 0.30145\n",
       "\n",
       "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 10.26326 (17.94969)\n",
-      "Val Loss (Med): 10.26326 (17.94969)\n",
+      "Train Loss (Med): 11.33994 (17.94969)\n",
+      "Val Loss (Med): 11.33994 (17.94969)\n",
       "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 9 (723)\n",
-      "Time (s): 0.58006\n",
+      "Median complexity (Max): 9 (975)\n",
+      "Time (s): 0.41635\n",
       "\n",
       "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 10.26326 (17.94969)\n",
-      "Val Loss (Med): 10.26326 (17.94969)\n",
-      "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 9 (304)\n",
-      "Time (s): 0.69868\n",
+      "Train Loss (Med): 10.79139 (90.38514)\n",
+      "Val Loss (Med): 10.79139 (90.38514)\n",
+      "Median Size (Max): 1 (19)\n",
+      "Median complexity (Max): 2 (975)\n",
+      "Time (s): 0.51077\n",
       "\n",
       "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 10.26326 (17.90349)\n",
-      "Val Loss (Med): 10.26326 (17.90349)\n",
-      "Median Size (Max): 4 (19)\n",
-      "Median complexity (Max): 22 (591)\n",
-      "Time (s): 0.82559\n",
+      "Train Loss (Med): 10.40925 (90.38514)\n",
+      "Val Loss (Med): 10.40925 (90.38514)\n",
+      "Median Size (Max): 1 (19)\n",
+      "Median complexity (Max): 1 (975)\n",
+      "Time (s): 0.60354\n",
       "\n",
       "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 10.26326 (16.75967)\n",
-      "Val Loss (Med): 10.26326 (16.75967)\n",
-      "Median Size (Max): 6 (19)\n",
-      "Median complexity (Max): 33 (591)\n",
-      "Time (s): 1.00143\n",
+      "Train Loss (Med): 10.26326 (90.38514)\n",
+      "Val Loss (Med): 10.26326 (90.38514)\n",
+      "Median Size (Max): 1 (19)\n",
+      "Median complexity (Max): 1 (975)\n",
+      "Time (s): 0.71462\n",
       "\n",
       "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 10.26326 (17.85729)\n",
-      "Val Loss (Med): 10.26326 (17.85729)\n",
-      "Median Size (Max): 5 (19)\n",
-      "Median complexity (Max): 9 (591)\n",
-      "Time (s): 1.21972\n",
+      "Train Loss (Med): 10.26326 (90.38514)\n",
+      "Val Loss (Med): 10.26326 (90.38514)\n",
+      "Median Size (Max): 1 (19)\n",
+      "Median complexity (Max): 1 (975)\n",
+      "Time (s): 0.81340\n",
       "\n",
       "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 10.26326 (17.94969)\n",
-      "Val Loss (Med): 10.26326 (17.94969)\n",
-      "Median Size (Max): 4 (19)\n",
-      "Median complexity (Max): 8 (324)\n",
-      "Time (s): 1.39759\n",
+      "Train Loss (Med): 10.26326 (90.38514)\n",
+      "Val Loss (Med): 10.26326 (90.38514)\n",
+      "Median Size (Max): 1 (19)\n",
+      "Median complexity (Max): 1 (975)\n",
+      "Time (s): 0.93026\n",
       "\n",
       "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 10.26326 (89.12132)\n",
-      "Val Loss (Med): 10.26326 (89.12132)\n",
-      "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 6 (723)\n",
-      "Time (s): 1.56908\n",
+      "Train Loss (Med): 10.26326 (90.38514)\n",
+      "Val Loss (Med): 10.26326 (90.38514)\n",
+      "Median Size (Max): 1 (19)\n",
+      "Median complexity (Max): 1 (975)\n",
+      "Time (s): 1.02575\n",
       "\n",
-      "Saved population to file /tmp/tmpvo0quw4a/population.json\n",
-      "saving final population as archive...\n",
-      "score: 0.8864497096851035\n"
+      "Saved population to file /tmp/tmpcu8hqpq3/population.json\n",
+      "score: 0.8864496413943795\n"
      ]
     }
    ],
@@ -135,6 +134,7 @@
     "    max_gens=10,\n",
     "    objectives=[\"error\", \"complexity\"],\n",
     "    save_population=pop_file,\n",
+    "    use_arch=True, # Only the pareto front of last gen will be stored in archive\n",
     "    verbosity=2\n",
     ")\n",
     "\n",
@@ -161,10 +161,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded population from /tmp/tmpvo0quw4a/population.json of size = 200\n",
+      "Loaded population from /tmp/tmphau_4iem/population.json of size = 200\n",
       "Completed 100% [====================]\n",
       "saving final population as archive...\n",
-      "score: 0.8900709681238513\n"
+      "score: 0.8864496413943844\n"
      ]
     }
    ],
@@ -203,9 +203,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded population from /tmp/tmpvo0quw4a/population.json of size = 200\n",
+      "Loaded population from /tmp/tmphau_4iem/population.json of size = 200\n",
       "Completed 100% [====================]\n",
-      "{'complexity': 240, 'crowding_dist': 3.4028234663852886e+38, 'dcounter': 0, 'depth': 3, 'dominated': [], 'linear_complexity': 24, 'loss': 9.675766944885254, 'loss_v': 9.675766944885254, 'rank': 1, 'size': 17, 'values': [9.675766944885254, 17.0], 'weights': [-1.0, -1.0], 'wvalues': [-9.675766944885254, -17.0]}\n"
+      "{'complexity': 164, 'crowding_dist': 3.4028234663852886e+38, 'dcounter': 0, 'depth': 3, 'dominated': [], 'linear_complexity': 16, 'loss': 10.66516399383545, 'loss_v': 10.66516399383545, 'rank': 1, 'size': 13, 'values': [10.66516399383545, 13.0], 'weights': [-1.0, -1.0], 'wvalues': [-10.66516399383545, -13.0]}\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -256,79 +256,79 @@
      "output_type": "stream",
      "text": [
       "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 0.54847 (0.69315)\n",
-      "Val Loss (Med): 0.54847 (0.69315)\n",
-      "Median Size (Max): 5 (10)\n",
-      "Median complexity (Max): 6 (270)\n",
-      "Time (s): 0.04547\n",
+      "Train Loss (Med): 0.62865 (0.69315)\n",
+      "Val Loss (Med): 0.62865 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 1.23444\n",
       "\n",
       "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 5 (10)\n",
-      "Median complexity (Max): 6 (90)\n",
-      "Time (s): 0.07358\n",
+      "Train Loss (Med): 0.62321 (0.69315)\n",
+      "Val Loss (Med): 0.62321 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 2.44751\n",
       "\n",
       "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 5 (10)\n",
-      "Median complexity (Max): 6 (279)\n",
-      "Time (s): 0.10416\n",
+      "Train Loss (Med): 0.62114 (0.69315)\n",
+      "Val Loss (Med): 0.62114 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 3.66024\n",
       "\n",
       "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 2 (10)\n",
-      "Median complexity (Max): 2 (279)\n",
-      "Time (s): 0.13638\n",
+      "Train Loss (Med): 0.62022 (0.69315)\n",
+      "Val Loss (Med): 0.62022 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 4.99399\n",
       "\n",
       "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 2 (10)\n",
-      "Median complexity (Max): 2 (279)\n",
-      "Time (s): 0.16392\n",
+      "Train Loss (Med): 0.61990 (0.69315)\n",
+      "Val Loss (Med): 0.61990 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 6.49968\n",
       "\n",
       "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 1 (10)\n",
-      "Median complexity (Max): 1 (54)\n",
-      "Time (s): 0.19176\n",
+      "Train Loss (Med): 0.61968 (0.69315)\n",
+      "Val Loss (Med): 0.61968 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 7.72971\n",
       "\n",
       "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 1 (10)\n",
-      "Median complexity (Max): 1 (90)\n",
-      "Time (s): 0.21715\n",
+      "Train Loss (Med): 0.61962 (0.69315)\n",
+      "Val Loss (Med): 0.61962 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 8.94153\n",
       "\n",
       "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 1 (10)\n",
-      "Median complexity (Max): 1 (54)\n",
-      "Time (s): 0.24563\n",
+      "Train Loss (Med): 0.61955 (0.69315)\n",
+      "Val Loss (Med): 0.61955 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 10.19942\n",
       "\n",
       "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 1 (10)\n",
-      "Median complexity (Max): 1 (48)\n",
-      "Time (s): 0.27388\n",
+      "Train Loss (Med): 0.61950 (0.69315)\n",
+      "Val Loss (Med): 0.61950 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 11.42022\n",
       "\n",
       "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 0.54846 (0.69315)\n",
-      "Val Loss (Med): 0.54846 (0.69315)\n",
-      "Median Size (Max): 1 (10)\n",
-      "Median complexity (Max): 1 (48)\n",
-      "Time (s): 0.29905\n",
+      "Train Loss (Med): 0.61947 (0.69315)\n",
+      "Val Loss (Med): 0.61947 (0.69315)\n",
+      "Median Size (Max): 7 (12)\n",
+      "Median complexity (Max): 21 (5889)\n",
+      "Time (s): 12.98263\n",
       "\n",
-      "Saved population to file /tmp/tmp3lun3trc/population.json\n",
+      "Saved population to file /tmp/tmp6z9ftnp3/population.json\n",
       "saving final population as archive...\n",
-      "Logistic(Sum(-0.83599114,If(AIDS>15890.50,15.27,0.39*MeanLabel)))\n",
-      "score: 0.68\n"
+      "Best model: 155.24*Logistic(Sum(-3.6533294,0.16*Logabs(0.00*AIDS)))\n",
+      "score: 0.6\n"
      ]
     }
    ],
@@ -348,97 +348,50 @@
     "    objectives=[\"error\", \"complexity\"],\n",
     "    scorer=\"log\",\n",
     "    save_population=pop_file,\n",
+    "    pop_size=1000,\n",
     "    verbosity=2\n",
     ")\n",
     "\n",
     "est.fit(X,y)\n",
-    "print(est.best_estimator_.get_model())\n",
     "\n",
-    "y_pred = est.predict(X)\n",
+    "print(\"Best model:\", est.best_estimator_.get_model())\n",
     "print('score:', est.score(X,y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy_score(y, est.predict(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 0.46115 (0.31675)\n",
-      "Val Loss (Med): 0.46115 (0.31675)\n",
-      "Median Size (Max): 5 (9)\n",
-      "Median complexity (Max): 6 (120)\n",
-      "Time (s): 0.07469\n",
-      "\n",
-      "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 0.55038 (0.31675)\n",
-      "Val Loss (Med): 0.55038 (0.31675)\n",
-      "Median Size (Max): 5 (9)\n",
-      "Median complexity (Max): 6 (648)\n",
-      "Time (s): 0.12616\n",
-      "\n",
-      "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 0.45385 (0.00000)\n",
-      "Val Loss (Med): 0.45385 (0.00000)\n",
-      "Median Size (Max): 1 (8)\n",
-      "Median complexity (Max): 1 (648)\n",
-      "Time (s): 0.16134\n",
-      "\n",
-      "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 0.75212 (0.00000)\n",
-      "Val Loss (Med): 0.75212 (0.00000)\n",
-      "Median Size (Max): 1 (9)\n",
-      "Median complexity (Max): 1 (30)\n",
-      "Time (s): 0.20292\n",
-      "\n",
-      "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 0.75212 (0.00000)\n",
-      "Val Loss (Med): 0.75212 (0.00000)\n",
-      "Median Size (Max): 1 (9)\n",
-      "Median complexity (Max): 1 (30)\n",
-      "Time (s): 0.23893\n",
-      "\n",
-      "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 0.75212 (0.31675)\n",
-      "Val Loss (Med): 0.75212 (0.31675)\n",
-      "Median Size (Max): 1 (9)\n",
-      "Median complexity (Max): 1 (30)\n",
-      "Time (s): 0.27777\n",
-      "\n",
-      "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 0.75212 (0.31675)\n",
-      "Val Loss (Med): 0.75212 (0.31675)\n",
-      "Median Size (Max): 1 (9)\n",
-      "Median complexity (Max): 1 (30)\n",
-      "Time (s): 0.33410\n",
-      "\n",
-      "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 0.75212 (0.31675)\n",
-      "Val Loss (Med): 0.75212 (0.31675)\n",
-      "Median Size (Max): 1 (9)\n",
-      "Median complexity (Max): 1 (30)\n",
-      "Time (s): 0.37918\n",
-      "\n",
-      "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 0.75212 (0.31675)\n",
-      "Val Loss (Med): 0.75212 (0.31675)\n",
-      "Median Size (Max): 1 (6)\n",
-      "Median complexity (Max): 1 (30)\n",
-      "Time (s): 0.41311\n",
-      "\n",
-      "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 0.75212 (0.31675)\n",
-      "Val Loss (Med): 0.75212 (0.31675)\n",
-      "Median Size (Max): 1 (6)\n",
-      "Median complexity (Max): 1 (30)\n",
-      "Time (s): 0.44007\n",
-      "\n",
-      "saving final population as archive...\n",
-      "Add(0.50*MeanLabel,AIDS)\n",
+      "Loaded population from /tmp/tmp6z9ftnp3/population.json of size = 2000\n",
+      "Completed 100% [====================]\n",
+      "Best model: 1.00*Logistic(Sum(0.49994996,If(AIDS>15890.50,1.00*MeanLabel,0.00*MeanLabel)))\n",
       "score: 0.5\n"
      ]
     }
@@ -446,18 +399,68 @@
    "source": [
     "est = BrushClassifier(\n",
     "    functions=['SplitBest','Add','Mul','Sin','Cos','Exp','Logabs'],\n",
-    "    #load_population=pop_file,\n",
-    "    objectives=[\"error\", \"linear_complexity\"],\n",
+    "    load_population=pop_file,\n",
+    "    objectives=[\"error\", \"complexity\"],\n",
     "    scorer=\"average_precision_score\",\n",
     "    max_gens=10,\n",
-    "    verbosity=2\n",
+    "    validation_size=0.0,\n",
+    "    pop_size=1000, # make sure this is the same as loaded pop\n",
+    "    use_arch=True,\n",
+    "    verbosity=1\n",
     ")\n",
     "\n",
     "est.fit(X,y)\n",
-    "print(est.best_estimator_.get_model())\n",
     "\n",
-    "y_pred = est.predict(X)\n",
+    "print(\"Best model:\", est.best_estimator_.get_model())\n",
     "print('score:', est.score(X,y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the fitness object, and that the error now matches the average precision score metric:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitness(0.680010 489.000000 )\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fitness is (error, linear complexity)\n",
+    "print(est.best_estimator_.fitness)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6799999999999999"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import average_precision_score\n",
+    "\n",
+    "# takes y_true as first argument, and y_pred as second argument.\n",
+    "average_precision_score(y, est.predict_proba(X)[:, 1]) #, average='weighted')"
    ]
   }
  ],
